# melby

./: .gitattributes  .gitignore  .gitmodules  Makefile  audit.sh  build-literate.org  build-packaging.org  cabal.project  client-rust.org  client.org  controller.org  daemon.org  developer-manual.html  developer-manual.org  image.html  image.org  internals.org  lilac.css  lilac.js  lilac.theme  main.html  main.org  melby.el  melby.proto  melby_client.proto  melby_daemon.proto  melby_renderer.proto  model.org  ptu.cabal  ptu.hs  ptu.nix  shell.nix  stack.nix  stack.yaml  syntax-highlighting.css  user-manual.html  user-manual.org  view.org
client/: .gitignore  Makefile  cabal.project  melby-client.cabal  melby-client.hs  melby-client.nix  stack.nix  stack.yaml
client-rust/: .gitignore  Cargo.toml  Makefile  build.rs  melby-client-rust.nix
client-rust/proto/: melby_client.proto
client-rust/src/: main.rs
client-rust/src/grpc_generated/: melby_client.rs  mod.rs
client/lib/MelbyClient/: GitVersion.hs  Schema.hs  melby_client.proto
daemon/: .formatter.exs  .gitattributes  .gitignore  Makefile  melby-daemon.nix  melbyd  mix.exs  mix.nix
daemon/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
daemon/install/: launchctl.sh  melby.service
daemon/lib/melbyd/: application.ex  cache.ex  color.ex  grpc.ex  lua_api.ex  nifs.ex  path.ex  shell_logger.ex  shell_process.ex  standard_resource.ex  view.ex
daemon/lib/melbyd/nifs/: .gitignore  Cargo.toml  Makefile  melby-nifs.nix
daemon/lib/melbyd/nifs/src/: color.rs  lib.rs  path_shorten.rs
daemon/lib/melbyd/renderer/: .ghci  .gitignore  Makefile  cabal.project  melby-renderer.cabal  melby-renderer.hs  melby-renderer.nix  stack.nix  stack.yaml
daemon/lib/melbyd/renderer/lib/MelbyRenderer/: Colorizer.hs  GitVersion.hs  Log.hs  PathAliases.hs  Schema.hs  Widgets.hs  melby_renderer.proto
daemon/lib/melbyd/renderer/test/: Main.hs
daemon/test/: kubectl  melbyd_test.exs  preview.sh  test_helper.exs
daemon/test/sample/: Git.lua  GitFake.lua  Kube.lua  KubeCurrent.lua  KubeCurrentFake.lua  KubeFake.lua  get_pods.gotemplate  git_staged_bytes.sh  melby.lua  path-aliases
image/: Makefile  architecture-overall.tex
lib/PostTangleUtil/: GitVersion.hs
package/: .gitignore  Makefile  build.nix  protoc-gen-elixir.nix  release.nix
package/nix/: sources.json  sources.nix  stack.nix
