name: melby-client
version: 1.0.0.0
author: Linus Arver
maintainer: linusa@google.com
category: Utility
build-type: Simple
cabal-version: >=1.10
license: Apache-2.0
license-file: LICENSE
data-files: lib/MelbyClient/melby_client.proto

executable melbyc
  main-is: melby-client.hs
  default-language: Haskell2010
  other-modules:
    Paths_melby_client
  default-extensions:
    DisambiguateRecordFields
    DuplicateRecordFields
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    NoDoAndIfThenElse
    NoNondecreasingIndentation
    OverloadedStrings
  ghc-options:
    -O2 -Werror -threaded -fno-warn-tabs
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields -fforce-recomp
  build-depends:
      base >= 4.8
    , melby-client
    , aeson
    , bytestring
    , conduit >= 1.3.2 && <2
    , containers
    , http-client
    , mu-grpc-client >=0.3.0.0
    , mu-optics >=0.3.0.0
    , mu-protobuf >= 0.4.0
    , mu-rpc >= 0.4.0
    , mu-schema >= 0.3.0
    , optparse-applicative >= 0.16.1.0
    , network >= 3.1.1.1
    , swagger2
    , text >=1.2 && <2
    , unordered-containers >= 0.2.16.0

library
  default-language: Haskell2010
  exposed-modules:
    MelbyClient.GitVersion
    MelbyClient.Schema
  hs-source-dirs:
    lib
  default-extensions:
    DisambiguateRecordFields
    DuplicateRecordFields
    ImportQualifiedPost
    LambdaCase
    MultiWayIf
    NoDoAndIfThenElse
    NoNondecreasingIndentation
    OverloadedStrings
  ghc-options:
    -O2 -Werror -fno-warn-tabs
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields -fforce-recomp
  build-depends:
      base >= 4.8
    , aeson
    , bytestring
    , containers
    , mu-protobuf >= 0.4.0
    , mu-schema >= 0.3.0
    , process
    , template-haskell
    , text >=1.2 && <2
    , time
