# Copyright 2024 Linus Arver
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "melbyd_nifs"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "melbyd_nifs"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
csscolorparser = "0.6.2"
envsubst = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustler = "0.31.0"
